--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,18 +1,109 @@
-/* Error: Expected expression.
- *   ,
- * 6 |     justify-content: ;
- *   |                      ^
- *   '
- *   sass/layout/_header.scss 6:22  @import
- *   sass/main.scss 14:9            root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: Expected expression.\a   \2577 \a 6 \2502      justify-content: ;\a   \2502                       ^\a   \2575 \a   sass/layout/_header.scss 6:22  @import\a   sass/main.scss 14:9            root stylesheet";
+/* vendors*/
+@import url("https://fonts.googleapis.com/css2?family=Bellefair&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Bellefair&display=swap");
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+  list-style: none;
 }
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  width: 100%;
+  height: 100vh;
+  box-sizing: border-box;
+  background: url("/assets/home/background-home-desktop.jpg");
+}
+
+body {
+  grid-template-columns: 1fr;
+  grid-template-rows: 136px auto;
+}
+body_header {
+  grid-row: 1;
+}
+body section {
+  grid-row: 2;
+}
+
+.header {
+  width: 100%;
+  height: 132px;
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+}
+.header_barreGenerale {
+  height: 96px;
+  width: 1200px;
+  margin-top: 30px;
+  margin-left: 20px;
+  position: relative;
+}
+.header_barreGenerale img {
+  height: 48px;
+  width: 48px;
+  margin-top: 21px;
+  margin-left: -90px;
+}
+.header_barreGenerale .bar {
+  position: absolute;
+  width: 467px;
+  height: 1px;
+  left: 2px;
+  top: 41px;
+  background: #FFFFFF;
+  mix-blend-mode: normal;
+  opacity: 0.25;
+  z-index: 20;
+}
+.header_menu {
+  height: 96px;
+  width: 746px;
+  border: 4px transparent solid;
+  margin-left: 453px;
+  margin-top: -77px;
+  position: relative;
+  background: rgba(255, 255, 255, 0.04);
+  backdrop-filter: blur(81.5485px);
+}
+.header_menu ul {
+  color: #FFFFFF;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 19.2px;
+  margin-top: 32px;
+  letter-spacing: 2.7px;
+  font-family: "Barlow Condensed" sans-serif;
+}
+.header_menu ul li:active {
+  border-bottom: 4px #FFFFFF solid;
+  padding-bottom: 34px;
+}
+.header_menu ul li:hover {
+  border-bottom: 4px #8d8989 solid;
+  padding-bottom: 34px;
+  mix-blend-mode: normal;
+}
+.header_menu ul li span {
+  margin-right: 10px;
+  font-weight: bold;
+}
+
+section {
+  border: 23px blue solide;
+  height: auto;
+  width: 100%;
+  color: #D0D6F9;
+}
+
+/*# sourceMappingURL=style.css.map */
