--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: inherit;
+    list-style: none;
 }
 
 html {
@@ -12,6 +13,8 @@ html {
 }
 
 body {
+    width:100%;
+    height: 100vh;
     box-sizing: border-box;
     background: url($the_desktop_background);
 }
