--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -35,7 +35,7 @@
         }
     }
 
-
+    //  header_menu
     &_menu {
         height: 96px;
         width: 746px;
@@ -63,23 +63,92 @@
 
         }
 
-        ul li:active {
-            border-bottom: 4px $color_tereciare solid;
-            padding-bottom: 34px;
-            
+        //   in javascript
 
-        }
+        // ul li:active {
+        //     border-bottom: 4px $color_tereciare solid;
+        //     padding-bottom: 34px;
+        // }
 
         ul li:hover {
-            border-bottom: 4px  #8d8989 solid;
+            transition: all 0.3ms ease-in-out;
+            border-bottom: 4px #8d8989 solid;
             padding-bottom: 34px;
-            mix-blend-mode: normal;
+            // mix-blend-mode: normal;
             // opacity: 0.5;
+        }
+
+        ul li {
+            cursor: pointer;
         }
 
         ul li span {
             margin-right: 10px;
             font-weight: bold;
+        }
+
+    }
+
+}
+
+// the breakpoint for the tablet
+@media screen and (max-width: map-get($breakpoint, tablet)) {
+    .header {
+
+        width: 100%;
+        height: 99px;
+
+
+        &_barreGenerale {
+            height: 96px;
+            width: 760px;
+            margin-top: 24px;
+            // position: relative;
+
+            img {
+                // position: absolute;
+                height: 48px;
+                width: 48px;
+                margin-top: 6px;
+                margin-left: 24px;
+            }
+
+            .bar {
+                // position: absolute;
+                width: 0px;
+                visibility: hidden;
+            }
+        }
+
+        //  header_menu
+        &_menu {
+            width: 481px;
+            height: 95px;
+            left: -177px;
+            top: -1px;
+            background: rgba(255, 255, 255, 0.04);
+
+            ul {
+                font-size: 1.1rem;
+                line-height: 16.2px;
+            }
+
+
+            ul li:hover {
+                transition: all 0.1ms ease-in-out;
+                border-bottom: 4px #8d8989 solid;
+                padding-bottom: 34px;
+                // mix-blend-mode: normal;
+                // opacity: 0.5;
+            }
+
+
+
+            ul li span {
+                margin-right: 3px;
+                font-weight: bold;
+            }
+
         }
 
     }
