--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,11 +19,23 @@ body {
   height: 100vh;
   box-sizing: border-box;
   background: url("/assets/home/background-home-desktop.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
-@media (max-with: 768px) {
+@media (max-width: 768px) {
   body {
     background: url("/assets/home/background-home-tablet.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+}
+
+@media (max-width: 375px) {
+  body {
+    background: url("/assets/home/background-home-mobile.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
   }
 }
 
@@ -44,6 +56,9 @@ body section {
   display: flex;
   flex-direction: row;
   justify-content: end;
+}
+.header_hamburger {
+  display: none;
 }
 .header_barreGenerale {
   height: 96px;
@@ -109,6 +124,9 @@ body section {
     width: 100%;
     height: 99px;
   }
+  .header_hamburger {
+    display: none;
+  }
   .header_barreGenerale {
     height: 96px;
     width: 760px;
@@ -143,6 +161,30 @@ body section {
   .header_menu ul li span {
     margin-right: 3px;
     font-weight: bold;
+  }
+}
+@media screen and (max-width: 375px) {
+  .header {
+    width: 100%;
+    height: 57px;
+  }
+  .header_hamburger {
+    display: block;
+    height: 21px;
+    width: 24px;
+    margin-top: 24px;
+    margin-left: -17px;
+    position: absolute;
+  }
+  .header_imgMobile {
+    height: 48px;
+    width: 48px;
+    margin-top: 10px;
+    margin-left: -310px;
+    position: absolute;
+  }
+  .header_barreGenerale {
+    display: none;
   }
 }
 section {
