--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -6,6 +6,10 @@
     flex-direction: row;
     justify-content: end;
 
+    &_hamburger {
+        display: none;
+    }
+
     &_barreGenerale {
         height: 96px;
         width: 1200px;
@@ -98,6 +102,10 @@
         width: 100%;
         height: 99px;
 
+        &_hamburger {
+            display: none;
+        }
+
 
         &_barreGenerale {
             height: 96px;
@@ -150,6 +158,48 @@
             }
 
         }
+
+    }
+
+}
+
+
+
+
+
+
+// the breakpoint for the mobile
+@media screen and (max-width: map-get($breakpoint, mobile)) {
+    .header {
+        width: 100%;
+        height: 57px;
+
+        // Hamburger menu
+        &_hamburger {
+            display: block;
+            height: 21px;
+            width: 24px;
+            margin-top: 24px;
+            margin-left: -17px;
+            position: absolute;
+        }
+
+        // the img for the mobile breakpoint
+        &_imgMobile {
+            height: 48px;
+            width: 48px;
+            margin-top: 10px;
+            margin-left: -310px;
+            position: absolute;
+        }
+
+        &_barreGenerale {
+
+            display: none;
+        }
+
+
+
 
     }
 
