--- a/sass/layout/_section.scss
+++ b/sass/layout/_section.scss
@@ -1,6 +1,5 @@
 section{
-    border:23px blue solide ;
     height: auto;
     width: 100%;
-    color:$color_secodaire
+    color:$color_tereciare;
 }
