--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -11,6 +11,8 @@ $the_mobile_background:"/assets/home/background-home-mobile.jpg";
 
 // the breakpoint
 $breakpoint:(
+    desktop:769px,
     mobile:375px,
     tablet:768px,
+
  )
