--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,97 +1,124 @@
-.header {
+// the breakpoint for the desktop
+@media screen and (min-width: map-get($breakpoint, desktop)) {
+    .header {
 
-    width: 100%;
-    height: 132px;
-    display: flex;
-    flex-direction: row;
-    justify-content: end;
+        width: 100%;
+        height: 132px;
+        display: flex;
+        flex-direction: row;
+        justify-content: end;
 
-    &_hamburger {
-        display: none;
-    }
-
-    &_barreGenerale {
-        height: 96px;
-        width: 1200px;
-        margin-top: 30px;
-        margin-left: 20px;
-        position: relative;
-        // border: 6px yellow solid;
-
-        img {
-            height: 48px;
-            width: 48px;
-            margin-top: 21px;
-            margin-left: -90px;
-        }
-
-
-        .bar {
-            position: absolute;
-            width: 467px;
-            height: 1px;
-            left: 2px;
-            top: 41px;
-            background: #FFFFFF;
-            mix-blend-mode: normal;
-            opacity: 0.25;
-            z-index: 20;
-        }
-    }
-
-    //  header_menu
-    &_menu {
-        height: 96px;
-        width: 746px;
-        border: 4px transparent solid;
-        margin-left: 453px;
-        margin-top: -77px;
-        position: relative;
-        background: rgba(255, 255, 255, 0.04);
-        backdrop-filter: blur(81.5485px);
-
-
-        ul {
-            // width: 540px;
-            // height: 19px;
-            color: $color_tereciare;
-            display: flex;
-            flex-direction: row;
-            justify-content: space-around;
-            font-weight: 400;
-            font-size: 1.6rem;
-            line-height: 19.2px;
-            margin-top: 32px;
-            letter-spacing: 2.7px;
-            font-family: 'Barlow Condensed'sans-serif;
+        // Hamburger menu
+        &_hamburger {
+            display: none;
 
         }
 
-        //   in javascript
+        // the img for the mobile breakpoint
+        &_imgMobile {
+            display: none;
 
-        // ul li:active {
-        //     border-bottom: 4px $color_tereciare solid;
-        //     padding-bottom: 34px;
-        // }
+        }
 
-        ul li:hover {
-            transition: all 0.3ms ease-in-out;
-            border-bottom: 4px #8d8989 solid;
+
+
+        &_barreGenerale {
+            height: 96px;
+            width: 1200px;
+            margin-top: 30px;
+            margin-left: 20px;
+            position: relative;
+            // border: 6px yellow solid;
+
+            img {
+                height: 48px;
+                width: 48px;
+                margin-top: 21px;
+                margin-left: -90px;
+            }
+
+
+            .bar {
+                position: absolute;
+                width: 467px;
+                height: 1px;
+                left: 2px;
+                top: 41px;
+                background: #FFFFFF;
+                mix-blend-mode: normal;
+                opacity: 0.25;
+                z-index: 20;
+            }
+        }
+
+        //  header_menu
+        &_menu {
+            height: 96px;
+            width: 746px;
+            border: 4px transparent solid;
+            margin-left: 453px;
+            margin-top: -77px;
+            position: relative;
+            background: rgba(255, 255, 255, 0.04);
+            backdrop-filter: blur(81.5485px);
+
+
+            ul {
+                // width: 540px;
+                // height: 19px;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-around;
+                line-height: 19.2px;
+                margin-top: 32px;
+                list-style: none;
+                color: $color_tereciare;
+                font-size: 1.6rem;
+                text-decoration: none;
+                font-family: 'Barlow Condensed'sans-serif;
+                font-weight: 400;
+                letter-spacing: 2.7px;
+
+            }
+
+
+            ul li:hover {
+                transition: all 0.3ms ease-in-out;
+                border-bottom: 4px #8d8989 solid;
+                padding-bottom: 34px;
+                // mix-blend-mode: normal;
+                // opacity: 0.5;
+            }
+
+
+
+            ul li {
+                cursor: pointer;
+
+            }
+
+
+            ul li span {
+                margin-right: 10px;
+                font-weight: bold;
+            }
+
+        }
+
+
+        // the class for js
+
+
+        .active {
+            // transition: all 0.3ms ease-in-out;
+            border-bottom: 4px $color_tereciare solid;
             padding-bottom: 34px;
-            // mix-blend-mode: normal;
-            // opacity: 0.5;
-        }
 
-        ul li {
-            cursor: pointer;
-        }
-
-        ul li span {
-            margin-right: 10px;
-            font-weight: bold;
         }
 
     }
+
+
 
 }
 
@@ -101,44 +128,66 @@
 
         width: 100%;
         height: 99px;
+        position: relative;
 
         &_hamburger {
+            display: none;
+        }
+
+        &_imgMobile {
             display: none;
         }
 
 
         &_barreGenerale {
             height: 96px;
-            width: 760px;
-            margin-top: 24px;
+            width: 729px;
+            margin-top: 2px;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
             // position: relative;
 
             img {
                 // position: absolute;
-                height: 48px;
-                width: 48px;
-                margin-top: 6px;
-                margin-left: 24px;
+                max-height: 48px;
+                max-width: 48px;
+                min-height: 28px;
+                min-width: 28px;
+                margin-top: 20px;
+                margin-left: 9px;
             }
 
             .bar {
-                // position: absolute;
-                width: 0px;
-                visibility: hidden;
+                display: none;
             }
         }
 
-        //  header_menu
+
+        //  header_menuTablet
         &_menu {
-            width: 481px;
-            height: 95px;
-            left: -177px;
-            top: -1px;
+            width: 450px;
+            height: 91px;
+            left: 316px;
+            top: 0px;
             background: rgba(255, 255, 255, 0.04);
+            backdrop-filter: blur(81.5485px);
+            position: absolute;
+
 
             ul {
                 font-size: 1.1rem;
                 line-height: 16.2px;
+                list-style: none;
+                color: $color_tereciare;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-around;
+                font-weight: 400;
+                margin-top: 32px;
+                letter-spacing: 2.7px;
+                font-family: 'Barlow Condensed'sans-serif;
+
             }
 
 
@@ -150,23 +199,33 @@
                 // opacity: 0.5;
             }
 
-
-
             ul li span {
-                margin-right: 3px;
-                font-weight: bold;
+                display: none;
             }
+
+
+
+
+
+        }
+
+        // the class for js
+
+
+        // .active {
+        //     display: none;
+        // }
+
+        .active_Tablet {
+            // transition: all 0.3ms ease-in-out;
+            border-bottom: 4px $color_tereciare solid;
+            padding-bottom: 34px;
 
         }
 
     }
 
 }
-
-
-
-
-
 
 // the breakpoint for the mobile
 @media screen and (max-width: map-get($breakpoint, mobile)) {
@@ -179,17 +238,20 @@
             display: block;
             height: 21px;
             width: 24px;
-            margin-top: 24px;
-            margin-left: -17px;
+            margin-top: 15px;
+            margin-left: 341px;
             position: absolute;
         }
 
         // the img for the mobile breakpoint
         &_imgMobile {
-            height: 48px;
-            width: 48px;
-            margin-top: 10px;
-            margin-left: -310px;
+            display: block;
+            min-height: 22px;
+            min-width: 22px;
+            max-height: 40px;
+            max-width: 40px;
+            margin-top: 7px;
+            margin-left: 7px;
             position: absolute;
         }
 
