--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,28 +1,68 @@
 @import url('https://fonts.googleapis.com/css2?family=Bellefair&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Bellefair&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Bellefair&display=swap');
+
+.moon_typo,
+.space_typo,
+.Douglas_typo,
+.Commander_typo {
+    font-family: 'Bellefair', sans-serif;
+}
+
+.AVG_DISTANCE_typo,
+.Body_Text_typo,
+.so_typo {
+    font-family: 'Barlow Condensed'sans-serif;
+}
 
 
-// .moon,.space,.Douglas {font-family: 'Bellefair', sans-serif;}
 
-// .so,.AVG_DISTANCE,.Body_Text {font-family: 'Barlow Condensed'sans-serif;}
+.so_typo {
+    
+    font-size: 28px;
+    font-weight: 400;
+    line-height: 34px;
+    letter-spacing: 4.724999904632568px;
+    text-align: left;
+}
+
+
+.Body_Text_typo {
+    font-size: 18px;
+    line-height: 32px;
+    font-weight: 400;
+    
+}
+
+
+
 
 // .moon{font-size: 100px;}
 
-// .space{font-size: 150px;}
+.space_typo {
+    
+font-size: 150px;
+font-weight: 400;
+line-height: 172px;
+letter-spacing: 0px;
+text-align: left;
+}
 
 // .Douglas{font-size: 56px;}
 
-// .Commander {font-size: 32px;}
+.Commander_typo {
+    font-size: 32px;
+    font-weight: 400;
+    line-height: 37px;
+    letter-spacing: 2px;
+    text-align:center ;
 
-// .so {font-size: 28px;}
-
-// .Body_Text {font-size: 28px;
-            //  line-height: 32px;
-            // font-weight: 400;  }
+}
 
 
-     
+
+
+
 // .AVG_DISTANCE{font-size:14px;
 // letter-spacing: 2.35;}
 
