--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -5,6 +5,8 @@
     padding: 0;
     box-sizing: inherit;
     list-style: none;
+    
+
 }
 
 html {
@@ -19,6 +21,33 @@ body {
     background: url($the_desktop_background)  ;
     background-size:cover;
     background-repeat: no-repeat;
+    overflow-x:hidden ;
+
+    // for modifier the apparence of sroll bar
+    &::-webkit-scrollbar {
+        width: 12px;
+       height: 48px;
+
+        /* width of the entire scrollbar */
+    }
+
+    &::-webkit-scrollbar-track {
+        background: rgb(21, 20, 26);
+        
+        /* color of the tracking area */
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background: rgb(80, 79, 83);
+        
+
+        /* color of the scroll thumb */
+        border-radius: 20px;
+        /* roundness of the scroll thumb */
+        border: 3px solid transparent;
+        /* creates padding around scroll thumb */
+    }
+    
 }
 
 
