--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -11,12 +11,15 @@
         // Hamburger menu
         &_hamburger {
             display: none;
+           
+
 
         }
 
         // the img for the mobile breakpoint
         &_imgMobile {
             display: none;
+
 
         }
 
@@ -128,28 +131,31 @@
 
         width: 100%;
         height: 99px;
-        position: relative;
+        
 
         &_hamburger {
             display: none;
+
         }
 
         &_imgMobile {
             display: none;
+
+
         }
 
 
         &_barreGenerale {
             height: 96px;
-            width: 729px;
+            width: 100%;
             margin-top: 2px;
             display: flex;
             flex-direction: row;
             justify-content: space-between;
-            // position: relative;
+            
 
             img {
-                // position: absolute;
+                
                 max-height: 48px;
                 max-width: 48px;
                 min-height: 28px;
@@ -168,11 +174,11 @@
         &_menu {
             width: 450px;
             height: 91px;
-            left: 316px;
+            margin-right:3px;
             top: 0px;
             background: rgba(255, 255, 255, 0.04);
             backdrop-filter: blur(81.5485px);
-            position: absolute;
+            
 
 
             ul {
@@ -201,6 +207,8 @@
 
             ul li span {
                 display: none;
+               
+
             }
 
 
@@ -232,6 +240,9 @@
     .header {
         width: 100%;
         height: 57px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
 
         // Hamburger menu
         &_hamburger {
@@ -239,8 +250,8 @@
             height: 21px;
             width: 24px;
             margin-top: 15px;
-            margin-left: 341px;
-            position: absolute;
+            margin-right:8px;
+            // position: absolute;
         }
 
         // the img for the mobile breakpoint
@@ -251,13 +262,14 @@
             max-height: 40px;
             max-width: 40px;
             margin-top: 7px;
-            margin-left: 7px;
-            position: absolute;
+            margin-left: 8px;
+            // position: absolute;
         }
 
         &_barreGenerale {
-
             display: none;
+
+
         }
 
 
