--- a/sass/layout/_section.scss
+++ b/sass/layout/_section.scss
@@ -1,5 +1,22 @@
-section{
+.section_home {
     height: auto;
     width: 100%;
-    color:$color_tereciare;
+    color: $color_tereciare;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    // transform: translate(50%);
+    // transition: transform 50s;
+
+
+    div {
+        width: 450px;
+        height: 382px;
+        // background-color: aqua;
+        margin-top: 255px;
+        margin-left: 105px;
+    }
+ 
+ 
+
 }
