--- a/sass/utils/_function.scss
+++ b/sass/utils/_function.scss
@@ -1,7 +1,13 @@
 // for the conversion of px then rem
-@function font-size_rem($value){
-    $rem:"rem";
-   $tete:($value*1)/10 #{$rem};
-   @return $tete;
+@function convertion_rem($value){
+   @return ($value*1rem)/10;
+   // @return math.div($value * 1rem, 10);
+
 
 }
+
+
+
+// @debug convertion_rem(29);
+
+
