--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -12,6 +12,9 @@
 html {
     // 10px div by def of 16px
     font-size: 62.5%;
+     width: 100%;
+     margin: 0;
+    
 }
 
 body {
@@ -22,6 +25,8 @@ body {
     background-size:cover;
     background-repeat: no-repeat;
     overflow-x:hidden ;
+    
+  
 
     // for modifier the apparence of sroll bar
     &::-webkit-scrollbar {
@@ -57,6 +62,14 @@ body {
       background: url($the_tablet_background) ;
       background-size: cover;
       background-repeat: no-repeat;
+      
+      width:100vw;
+      height:100vh;
+      box-sizing: border-box;
+      background-size:cover;
+      background-repeat: no-repeat;
+      overflow-x:clip;
+
     }
 }
 
@@ -66,6 +79,7 @@ body {
         background: url($the_mobile_background) ;
         background-size:cover;
         background-repeat: no-repeat;
+        // overflow-y:clip;
         
     }
 }
