--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -1,3 +1,4 @@
+// the breakpoint for the desktop
 .Home_btn {
     // position: absolute;
     width: 274px;
@@ -17,8 +18,8 @@
         height: 174px;
         animation: pulse-animation 2s infinite;
         cursor: pointer;
-    
-    
+
+
     }
 }
 
@@ -26,7 +27,7 @@
 
 
 
-// l'aniamtion de pulsation pour le btn de la page Home
+// l'aniamtion de pulsation pour le btn (EXPLORE) de la page Home
 @keyframes pulse-animation {
     0% {
         box-shadow: 0 0 0 0px rgb(36, 38, 47);
@@ -35,4 +36,65 @@
     100% {
         box-shadow: 0 0 0 200px rgba(0, 0, 0, 0);
     }
+}
+
+
+
+
+
+// the breakpoint for the tablet
+@media screen and (max-width: map-get($breakpoint, tablet)) {
+    .Home_btn {
+        //   position: absolute;
+        width: 242px;
+        height: 242px;
+        margin-top: 11px;
+        margin-left: 182px;
+        border-radius: 101%;
+        // border:50px black solid;
+        // box-sizing: content-box;
+
+
+        &:hover {
+            border: 50px rgb(36, 38, 47) solid;
+            box-sizing: content-box;
+            width: 174px;
+            height: 174px;
+            animation: pulse-animation 2s infinite;
+            cursor: pointer;
+
+
+        }
+    }
+
+
+}
+
+
+
+
+// the breakpoint for the mobile
+@media screen and (max-width: map-get($breakpoint, mobile)) {
+    .Home_btn {
+        width: 150px;
+        height: 150px;
+        margin-top: 62px;
+        margin-left: 117px;
+        border-radius: 101%;
+
+
+
+        &:hover {
+            border: 20px rgb(36, 38, 47) solid;
+            box-sizing: content-box;
+            width: 154px;
+            height: 154px;
+            animation: pulse-animation 2s infinite;
+            cursor: pointer;
+
+
+        }
+    }
+
+
 }
