--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -11,7 +11,7 @@
         // Hamburger menu
         &_hamburger {
             display: none;
-           
+
 
 
         }
@@ -65,6 +65,10 @@
             background: rgba(255, 255, 255, 0.04);
             backdrop-filter: blur(81.5485px);
 
+            img {
+                display: none;
+            }
+
 
             ul {
                 // width: 540px;
@@ -75,12 +79,7 @@
                 line-height: 19.2px;
                 margin-top: 32px;
                 list-style: none;
-                color: $color_tereciare;
-                font-size: 1.6rem;
-                text-decoration: none;
-                font-family: 'Barlow Condensed'sans-serif;
-                font-weight: 400;
-                letter-spacing: 2.7px;
+
 
             }
 
@@ -125,13 +124,20 @@
 
 }
 
+
+
+
+
+
+
+
 // the breakpoint for the tablet
 @media screen and (max-width: map-get($breakpoint, tablet)) {
     .header {
 
-        width: 100%;
+        width: 100vw;
         height: 99px;
-        
+
 
         &_hamburger {
             display: none;
@@ -152,14 +158,12 @@
             display: flex;
             flex-direction: row;
             justify-content: space-between;
-            
+
 
             img {
-                
-                max-height: 48px;
-                max-width: 48px;
-                min-height: 28px;
-                min-width: 28px;
+
+                height: 48px;
+                width: 48px;
                 margin-top: 20px;
                 margin-left: 9px;
             }
@@ -172,27 +176,26 @@
 
         //  header_menuTablet
         &_menu {
-            width: 450px;
+            width: 348px;
             height: 91px;
-            margin-right:3px;
-            top: 0px;
+            // margin-right: 10px;
             background: rgba(255, 255, 255, 0.04);
             backdrop-filter: blur(81.5485px);
-            
 
+            img {
+                display: none;
+            }
 
             ul {
                 font-size: 1.1rem;
                 line-height: 16.2px;
-                list-style: none;
-                color: $color_tereciare;
                 display: flex;
                 flex-direction: row;
                 justify-content: space-around;
                 font-weight: 400;
                 margin-top: 32px;
-                letter-spacing: 2.7px;
-                font-family: 'Barlow Condensed'sans-serif;
+
+
 
             }
 
@@ -207,7 +210,7 @@
 
             ul li span {
                 display: none;
-               
+
 
             }
 
@@ -235,6 +238,13 @@
 
 }
 
+
+
+
+
+
+
+
 // the breakpoint for the mobile
 @media screen and (max-width: map-get($breakpoint, mobile)) {
     .header {
@@ -250,8 +260,8 @@
             height: 21px;
             width: 24px;
             margin-top: 15px;
-            margin-right:8px;
-            // position: absolute;
+            margin-right: 8px;
+
         }
 
         // the img for the mobile breakpoint
@@ -263,18 +273,97 @@
             max-width: 40px;
             margin-top: 7px;
             margin-left: 8px;
-            // position: absolute;
+
+        }
+
+
+        //scss pour la modale droite du menu hambuger
+        &_barreGenerale a,
+        .bar {
+            display: none;
+        }
+
+        &_barreGenerale,
+        &_menu {
+            height: 667px;
+            width: 254px;
+            left: 121px;
+            top: 0px;
+            border-radius: 0px;
+
         }
 
         &_barreGenerale {
             display: none;
+        }
 
+        &_menu ul {
+            display: flex;
+            flex-direction: column;
+            margin-left: 58px;
+            margin-top: 145px;
+
+
+            li {
+                display: flex;
+                flex-direction: row;
+                padding-bottom: 20px;
+            }
+
+            li span {
+                display: block;
+                margin-top: -2px;
+                margin-right: 15px;
+
+
+            }
+
+            // ce hover est la pour annule le hove des tablet et pc 
+            li:hover {
+
+                border-bottom: 0px transparent solid;
+                padding-bottom: 20px;
+                // mix-blend-mode: normal;
+                // opacity: 0.5;
+            }
 
         }
+
+        &_menu img {
+            display: block;
+            width: 31px;
+            height: 32px;
+            margin-left: 200px;
+            color: #FFFFFF;
+        }
+
+
+        // the class for js
+
+        .block{
+            display:block ;
+           
+        }
+
+        .none{
+            display:none ;
+        }
+
+
+
 
 
 
 
     }
+
+
+
+
+
+
+
+
+
 
 }
