--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 // utile
 @import "./utils/_variables";
+@import "./utils/function";
 
 /* vendors*/
 // base
@@ -12,7 +13,8 @@
 // layout
 @import "./layout/_grid";
 @import "./layout/_header";
-@import "./layout/_section";
+@import "./layout/_section_Home";
+@import "./layout/_section_destination";
 
 // pages
 
